27/4/2024
- Dinopedia Now Displays % Done Instead of Ticks On Pregnant Animals
- Fixed Smilodon Not Having Baby Variant
- Fixed Entity Voice's Being Really Deep As Babies And High As Adults
- Fixed Dinosaur's Commands Not Loading
Experimental:
- Fixed Therizinosaurus's Commanding Items
26/4/2024
- Internal Cleanup
- Fixed Stegosaurus Eggs Hatching Brachiosaurus
- Fixed Legacy Texture Pack Missing pack.mcmeta
- Fixed F/A Operator Items Without Operater Permissions Showing Up
- Fixed Academy Placement
- Fixed Pregnant Animals Not Becoming the Correct Animal Upon Returning To None Pregnant Variant
- Fixed Impregnation of Baby Animals
- Fixed Insta-Births
- Fixed Stegosaurus Tail Texture Issue
- Fixed Velociraptor Interactions
- Fixed Non-Broken Javelins From Being Used 
- Fixed Javelins Removing an Entire Stack When Used
- Fixed Nautilus Stacking Above 1
- Fixed Magic Conch JEI
- Fixed Spawn Placements on Forge and NeoForge
- Fixed Academy Disc Loot Table
- Fixed Pregnant Animals Being Able to Breed
- Weapon Shops Now Generate Closer to The Surface
- SyringeAnimals Has Been Replaced With PregnancyType and It Can Be Expanded On
- Fix Untranslated Strings for Pregnanant Animals
- Added Holes to Academies
Experimental:
- Update Time Machine Interface
- Added Carnotaurus
- Added Cryolophosaurus
- Added Therizinosaurus
- Added Carnotaurus DNA
- Added Cryolophosaurus DNA
- Added Therizinosaurus DNA
- Added Carnotaurus Egg
- Added Cryolophosaurus Egg
- Added Therizinosaurus Egg
- Added Raw Carnotaurus Meat
- Added Raw Cryolophosaurus Meat
- Added Raw Therizinosaurus Meat
- Added Cooked Carnotaurus Meat
- Added Cooked Cryolophosaurus Meat
- Added Cooked Therizinosaurus Meat
21/4/2024
- Multiloader Restructure
- Fixed Time Machine not having a loot table
17/4/2024
- Added Triceratops
- Added Velociraptor
- Added Tyrannosaurus
- Added Pterandon
- Added Nautilus
- Added Futabasaurus
- Added Mosasaurus
- Added Stegosaurus
- Added Dilophosaurus
- Added Brachiosaurus