@@ -28,6 +28,34 @@ subprojects {
         it.options.getRelease().set(17)
     }
 
+    processResources {
+        def expandProps = [
+                "version"                : version,
+                "group"                  : project.group,
+                "minecraft_version"      : minecraft_version,
+                "forge_version"          : forge_version,
+                "forge_version_range"    : forge_version_range,
+                "forge_version_range"    : forge_version_range,
+                "minecraft_version_range": minecraft_version_range,
+                "api_version"            : api_version,
+                "fabric_version"         : fabric_version,
+                "mod_name"               : mod_name,
+                "homepage"               : homepage,
+                "issue_tracker"          : issue_tracker,
+                "mod_author"             : mod_author,
+                "mod_id"                 : mod_id,
+                "icon"                   : icon,
+                "license"                : license,
+                "description"            : project.description,
+                "neoforge_version"       : neoforge_version,
+                "neoforge_version_range" : neoforge_version_range,]
+
+        filesMatching(['fabric.mod.json', 'META-INF/mods.toml']) {
+            expand expandProps
+        }
+        inputs.properties(expandProps)
+    }
+
     tasks.withType(GenerateModuleMetadata).configureEach {
         enabled = false
     }
